[package]
name = "privy"
version = "0.1.0"
authors = ["Somta Atmos <cwo@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
sodiumoxide = "0.2.6"
noise-sodiumoxide = "0.1.1"
libsodium-sys = "0.2.6"
signatory-sodiumoxide = "0.21.0"
rmp-serde = "0.14.4"
serde = "1.0.116"
serde_derive = "1.0.116"
rpassword = "5.0.0"
dirs = "3.0.1"
shrust = "0.0.7"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
bytes = "0.5.6"
futures-core = "0.3.5"
zeroize = "1.1.1"
base64 = "0.12.0"
rand = "0.7.3"
tokio-serde-msgpack = { git = "https://github.com/syndirect/tokio-serde-msgpack" }
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
memsec = "0.6.0"
[dev-dependencies]
tokio-test = "0.2.1"
